@@ -7,5 +7,6 @@ This chapter describes the constants defined by wxWidgets.
 \input cppconst.tex
 \input stdevtid.tex
 \input keycode.tex
+\input keymod.tex
 \input langcodes.tex
 \input stockitems.tex
